# fmcore

./: pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: build.yml  release.yml
src/fmcore/: runner_test.py  test.py
src/fmcore/algorithm/: __init__.py  bedrock.py  langchain.py  sentence_transformers.py  vllm.py
src/fmcore/algorithm/huggingface/: transformers.py
src/fmcore/algorithm/sklearn/: SklearnSGDClassifier.py  SklearnSGDRegressor.py
src/fmcore/constants/: AlgorithmConstants.py  Alias.py  DataProcessingConstants.py  FileConstants.py  MLConstants.py  MetricConstants.py  VisualizationConstants.py  __init__.py
src/fmcore/data/: FileMetadata.py  asset.py  pipeline.py
src/fmcore/data/processor/: DataProcessor.py  Nto1ColumnProcessor.py  SingleColumnProcessor.py  mixins.py
src/fmcore/data/reader/: Reader.py
src/fmcore/data/sdf/: DaskScalableDataFrame.py  DaskScalableSeries.py  DatumScalableSeries.py  DictScalableDataFrame.py  ListOfDictScalableDataFrame.py  NumpyArrayScalableSeries.py  NumpyRecordArrayScalableDataFrame.py  PandasScalableDataFrame.py  PandasScalableSeries.py  RecordScalableDataFrame.py  ScalableDataFrame.py  ScalableDataFrameDataset.py  ScalableSeries.py  TensorScalableSeries.py  TorchScalableSeries.py
src/fmcore/data/writer/: Writer.py
src/fmcore/experimental/: test.py
src/fmcore/experimental/adapters/: deepeval_adapter.py  dspy_adapter.py
src/fmcore/experimental/factory/: bedrock_factory.py  boto_factory.py
src/fmcore/experimental/llm/: __init__.py  base_llm.py  bedrock_llm.py
src/fmcore/experimental/metrics/: __init__.py  base_metric.py  custom_metric.py  deepeval_geval.py
src/fmcore/experimental/prompt_tuner/: __init__.py  base_prompt_tuner.py  dspy_prompt_tuner.py
src/fmcore/experimental/proxy/: rate_limit_proxy.py
src/fmcore/experimental/types/: llm_types.py  metric_types.py  prompt_tuner_types.py  provider_types.py
src/fmcore/experimental/utils/: deepeval_utils.py
src/fmcore/framework/: __init__.py  _algorithm.py  _dataset.py  _predictions.py  algorithm.py  metric.py  mixins.py  predictions.py  pydanticValidation.spec.md  ray_base.py  task_data.py  visualize.py
src/fmcore/framework/_chain/: Chain.py
src/fmcore/framework/_evaluator/: Evaluator.py  Evaluator.py.spec.md  MultiProcessEvaluator.py  ParallelEvaluator.py  RayEvaluator.py  __init__.py  _evaluator_utils.py
src/fmcore/framework/_task/: classification.py  text_generation.py
src/fmcore/framework/_trainer/: RayTuneTrainer.py
src/fmcore/llm/: base_llm.py  bedrock_llm.py
src/fmcore/metric/: __init__.py  classification_metrics.py  regression_metrics.py  text_generation_metrics.py
src/fmcore/metrics/: deepeval_geval.py
src/fmcore/prompt_tuner/: base_prompt_tuner.py  dspy_prompt_tuner.py
src/fmcore/proxy/: rate_limit_proxy.py
src/fmcore/runners/: base_runner.py  prompt_tuner_runner.py
src/fmcore/types/: dataset_types.py  prompt_tuner_types.py  provider_types.py  run_config_types.py  typed.py
src/fmcore/util/: __init__.py  concurrency.py  environment.py  filesystem.py  jupyter.py  logging.py  notify.py  profiling.py  schema.py  struct.py
src/fmcore/utils/: dataset_utils.py  deepeval_utils.py
tests/: test_imports.py
tests/typed/: test_typed.py
(+95 files in other folders)
